# minimal-axum-template

./: .env  .gitignore  Cargo.toml  README.md  package-lock.json
backend/: .env  Cargo.toml  LICENSE
backend/migrations/: 0002_users.sql
backend/src/: config.rs  lib.rs  main.rs
backend/src/crud/: mod.rs  user.rs
backend/src/http/: dependencies.rs  mod.rs  utils.rs
backend/src/http/routers/: auth.rs  user.rs
backend/src/schemas/: users.rs
frontend/app/: layout.tsx
frontend/app/context/: AuthContext.tsx
frontend/app/dashboard/: page.tsx
frontend/app/lib/: api.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
migrations/: 1_setup.sql  1_users.sql  2_users.sql
src/: lib.rs  main.rs
src/crud/: user.rs
src/http/: auth.rs  dependencies.rs  error.rs  mod.rs  utils.rs
src/http/routers/: auth.rs  user.rs
src/schemas/: users.rs
