[package]
name = "rust_backend"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Core dependencies: runtime, HTTP framework and database client.
futures = "0.3"
tokio = { version = "1", features = ["full"] }

axum = { version = "0.8.1", features = ["tower-log"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "uuid",
    "time",
] }

# The `clap` beta gives us a much nicer way to define configuration parameters for our application.
clap = { version = "4.5", features = ["derive", "env"] }

serde = { version = "1", features = ["derive"] }

# State of the art password hashing.
argon2 = "0.5"

# axum builds on the types in Tower
tower = "0.5"

time = "0.3.30"

uuid = { version = "1", features = ["serde", "v4", "fast-rng"] }

# Utility Crates
anyhow = "1.0.48"
dotenv = "0.15.0"
env_logger = "0.10.0"
itertools = "0.12"
log = "0.4.14"
rand = "0.8.4"
thiserror = "1.0.30"
serde_json = "1.0.135"
digest = "0.10.7"
jsonwebtoken = "9.3.0"
chrono = "0.4.39"
